<resources>
    <string name="app_name">My Application 2</string>
    <string name="get_started">Get Started</string>
    <string name="header_desc">by creating a free account.</string>
    <string name="image_desc">Background image</string>
    <string name="check_box">By checking the box you agree to our Terms and Conditions</string>
    <string name="button_next">Next</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="welcome">Welcome back</string>
    <string name="sign_in">sign in to access your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password ?</string>
    <string name="full_name">Full name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="error_invalid_data">You entered wrong credentials</string>
    <string name="title_activity_fragment_auth">FragmentAuthActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_exists_error">Email exists</string>
    <string name="wrong_password_error">Wrong password</string>
    <string name="invalid_credentials_error">Email does not exist</string>
    <string name="meal_image">An image of a meal</string>
    <string name="heart_shaped_icon">heart shaped icon</string>
    <string name="sharing_icon">sharing icon</string>
</resources>