<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="10dp">


    <ImageView

        android:id="@+id/recipeImage"
        android:layout_width="124dp"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/meal_image"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/recipeImage"
        app:layout_constraintTop_toTopOf="parent"
        tool:text="Recipe1" />

    <TextView
        android:id="@+id/recipeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/recipeTitle"
        app:layout_constraintTop_toBottomOf="@+id/recipeTitle"
        tool:text="Description of recipe 1 bla bla bla" />

    <ImageButton
        android:id="@+id/recipeShare"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/share_icon"
        android:contentDescription="@string/sharing_icon"
        app:layout_constraintStart_toStartOf="@+id/recipeTitle"
        app:layout_constraintTop_toBottomOf="@+id/recipeDescription" />

    <ImageButton
        android:id="@+id/recipeLike"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/heart_icon"
        android:contentDescription="@string/heart_shaped_icon"
        app:layout_constraintStart_toEndOf="@+id/recipeShare"
        app:layout_constraintTop_toBottomOf="@+id/recipeDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>